# excalead

./: .gitignore  .gitmodules  README.md  example_usage.sh
.github/workflows/: coq-ci.yml  idl-to-rocq.yml
Excalead/: .gitignore  Basic4.v  Excalead.v  Makefile  Tactics.v  Vector.v  dune-project  new_idl.v  rocq-excalead.opam
Excalead/domin8/model/: constants.v  dune  errors.v
Excalead/domin8/model/instructions/: bet.v  deposit_bet.v
Excalead/domin8/model/state/: config.v  game.v  game_config.v  game_round.v  mod.v  player_entry.v
Excalead/examples/domin8/model/instructions/: deposit_bet.v
Excalead/examples/domin8/model/state/: game_config.v  game_round.v  mod.v  player_entry.v
Excalead/ocaml-json/Extracted/: Prelude.v  dune
Excalead/ocaml-json/examples/domin8/: deposit_bet_test.ml  dune
Excalead/src/: Anchor_lang.v  Anchor_spl.v  ExcaExtraction.v  Excalead.v  Tactics.v  dune
Excalead/src/Anchor_lang/: Base.v  Notations.v  Structs.v  Traits.v
Excalead/src/Anchor_spl/: token.v
Excalead/src/Base/: Classes.v  Nums.v  Result.v
Excalead/src/Utility/: RecordUpdate.v  Vector.v
Excalead/src/examples/domin8/model/: errors.v
Excalead/src/examples/domin8/model/instructions/: deposit_bet.v
Excalead/src/examples/domin8/model/state/: game_config.v  game_round.v  mod.v  player_entry.v
Excalead/src/examples/domin8/reference/instructions/: initialize.rs
Excalead/src/examples/domin8/reference/state/: game_config.rs  game_round.rs
Excalead/src/examples/quantu_8004/: README.md  lib.v
Excalead/src/examples/quantu_8004/identity_registry/: error.v  lib.v  state.v
Excalead/src/examples/quantu_8004/validation_registry/: error.v  events.v  lib.v  state.v
Excalead/src/examples/sablier/: README.md
Excalead/src/examples/sablier/lockup/instructions/: create_with_timestamps.v  withdraw.v
Excalead/src/examples/sablier/lockup/state/: lockup.v
Excalead/src/examples/sablier/lockup/utils/: errors.v  lockup_math.rs  lockup_math.v  validations.v
Excalead/src/secure/: Basic4.v  new.json  new_idl.v  sablier_lockup.json  sablier_lockup_idl.v
Excalead/test/Extracted/: Lib.ml  Prelude.v  dune
Excalead/test/examples/domin8/: dune  test_deposit_bet.ml
src/: Cargo.toml  README.md  main.rs
static/: json.excalidraw
