opam-version: "2.0"
name: "rocq-excalead"
version: "0.1.0"
synopsis: "Excalead"
description: """
Formal representation of Solana smart contracts
"""
maintainer: "Guillaume Claret <dev@clarus.me>"
authors: [
  "Formal Land <contact@formal.land>"
]
license: "MIT"
homepage: "https://github.com/Excalead/excalead"
bug-reports: "https://github.com/Excalead/excalead/issues"
dev-repo: "git+https://github.com/Excalead/excalead.git"
depends: [
  "coq" {>= "8.20.0" }
  "coq-coqutil" {>= "0.0.5"}
  "coq-hammer"
  "coq-smpl"
]
build: [
  [make]
]
