[package]
name = "idl-to-rocq"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "idl-to-rocq"
path = "main.rs"

[dependencies]
anchor-lang-idl = { path = "../third-parties/anchor/idl", features = ["convert"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

